# HydraPIR

./: .example_env  .gitignore  Cargo.toml  README.md  build.rs
benches/: bit_pir_benchmarks.rs  bit_pir_practical_benchmarks.rs  bit_pir_priv_upt_benchmarks.rs  non_priv_upt_benchmarks.rs  pir_benchmarks.rs  pir_priv_upt_benchmarks.rs
cuckoo_lib/: Cargo.toml
cuckoo_lib/src/: lib.rs
data/: ChalametPIR-benchmarks-14-kw.txt  ChalametPIR-benchmarks-17-kw.txt  ChalametPIR-benchmarks-20-kw.txt  bench_kpir_14_bucket_opt_1.txt  bench_kpir_14_bucket_opt_2.txt  bench_kpir_16_bucket_opt_1.txt  bench_kpir_16_bucket_opt_2.txt  bench_kpir_17_bucket_opt_1.txt  bench_kpir_17_bucket_opt_2.txt  bench_kpir_20_bucket_opt_1.txt  bench_kpir_20_bucket_opt_2.txt  bench_kpir_bit_opt_14_bucket_opt_1.txt  bench_kpir_bit_opt_14_bucket_opt_2.txt  bench_kpir_bit_opt_16_bucket_opt_1.txt  bench_kpir_bit_opt_16_bucket_opt_2.txt  bench_kpir_bit_opt_17_bucket_opt_1.txt  bench_kpir_bit_opt_17_bucket_opt_2.txt  bench_kpir_bit_opt_20_bucket_opt_1.txt  bench_kpir_bit_opt_20_bucket_opt_2.txt  bench_kpir_bit_opt_priv_upt_14_bucket_opt_1.txt  bench_kpir_bit_opt_priv_upt_16_bucket_opt_1.txt  bench_kpir_bit_opt_priv_upt_20_bucket_opt_1.txt  bench_kpir_priv_upt_14_bucket_opt_1.txt  bench_kpir_priv_upt_16_bucket_opt_1.txt  bench_kpir_priv_upt_20_bucket_opt_1.txt  bench_pgp_2048_rsa.txt  bench_pgp_256_ecc.txt  bench_pgp_4096_rsa.txt  bench_server_side_upt_14.txt  bench_server_side_upt_16.txt  bench_server_side_upt_16_insert.txt  bench_server_side_upt_17.txt  bench_server_side_upt_20.txt  bench_server_side_upt_20_insert.txt  config_helper.py  config_tester.py  gen_db.py  gen_fake_practical_db_setup.py
dpf_half_tree_bit_lib/: Cargo.toml
dpf_half_tree_bit_lib/src/: lib.rs
dpf_half_tree_lib/: Cargo.toml
dpf_half_tree_lib/src/: lib.rs
proto/: ms_kpir.proto
src/: client.rs  config.rs  lib.rs  main.rs  server.rs  server_admin.rs
