[package]
name = "kpir"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "cuckoo_lib",
    "dpf_half_tree_lib"
    # Add other library or binary directories here if they are direct children
]

[dependencies]
async-stream = "0.3.6"
csv = "1.3.1"
cuckoo_lib = { path = "cuckoo_lib" }
dpf_half_tree_lib = { path = "dpf_half_tree_lib" }
prost = "0.13.5"
rand = "0.9.1"
tokio = { version="1", features = ["full"]}
tonic = "0.13.0"
uuid = { version = "1.7.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.13.0"
