[package]
name = "kpir"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "cuckoo_lib",
    "dpf_half_tree_lib",
    "dpf_half_tree_bit_lib"
    # Other library or binary directories can be added here if they are direct children
]

[dependencies]
aes = "0.8.4"
async-stream = "0.3.6"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.1"
cuckoo_lib = { path = "cuckoo_lib" }
dotenvy = "0.15"
dpf_half_tree_lib = { path = "dpf_half_tree_lib" }
dpf_half_tree_bit_lib = { path = "dpf_half_tree_bit_lib" }
futures = "0.3.31"
prost = "0.13.5"
rand = "0.9.1"
tokio = { version="1", features = ["full"]}
tokio-stream = {version="0.1.17", features = ["sync"] }
tonic = "0.13.0"
uuid = { version = "1.7.0", features = ["v4"] }

[build-dependencies]
dotenvy = "0.15"
tonic-build = "0.13.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pir_benchmarks"
harness = false

[[bench]]
name = "pir_priv_upt_benchmarks"
harness = false

[[bench]]
name = "bit_pir_benchmarks"
harness = false

[[bench]]
name = "bit_pir_priv_upt_benchmarks"
harness = false

[[bench]]
name = "bit_pir_practical_benchmarks"
harness = false

[[bench]]
name = "non_priv_upt_benchmarks"
harness = false
